# text-game

./: Cargo.toml  LICENSE  README.md
assets/config/: default.toml
assets/stories/: mystic-forest.json  space-station.json
src/: lib.rs  main.rs
src/config/: mod.rs
src/core/: engine.rs  events.rs  game_state.rs  mod.rs  player.rs
src/story/: conditions.rs  effects.rs  loader.rs  mod.rs  story.rs
src/ui/: components.rs  interface.rs  mod.rs  theme.rs
src/utils/: errors.rs  mod.rs  save_manager.rs
