[package]
name = "text-adventure-game"
version = "1.0.0"
edition = "2021"
authors = ["Hamza Younas <hamzafulldev@gmail.com>"]
description = "A professional text-based adventure game with branching narratives"
license = "MIT"
repository = "https://github.com/hamzafulldev/Text-Game"
keywords = ["game", "text-adventure", "cli", "interactive-fiction"]
categories = ["games", "command-line-utilities"]

[[bin]]
name = "text-game"
path = "src/main.rs"

[dependencies]
# CLI and user interaction
clap = { version = "4.4", features = ["derive", "color"] }
dialoguer = { version = "0.11", features = ["fuzzy-select"] }
console = "0.15"
colored = "2.0"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "0.8"

# File system and I/O
tokio = { version = "1.0", features = ["full"] }
uuid = { version = "1.6", features = ["v4", "serde"] }

# Error handling and logging
anyhow = "1.0"
thiserror = "1.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Date and time
chrono = { version = "0.4", features = ["serde"] }

# Configuration
config = "0.13"

# Async utilities
futures = "0.3"

[dev-dependencies]
tokio-test = "0.4"
tempfile = "3.8"
pretty_assertions = "1.4"

[profile.release]
lto = true
codegen-units = 1
panic = "abort"
strip = true

[profile.dev]
debug = true
overflow-checks = true